app/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: php-app
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: app
        image: rafanercessian/aplicacao:v1
        resources:
          limits:
            memory: 1Gi
            cpu: 500m
          requests:
            memory: 200Ki
            cpu: 200m
        ports:
        - containerPort: 80
