app/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: app
  namespace: dev
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 80
