app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
  - host: loja.test
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
